--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongodb": "^6.0.0",
     "pg": "^8.11.3",
     "sequelize": "^6.32.1",
     "winston": "^3.10.0"
